			CHANGELOG for KAME kit

$KAME: CHANGELOG,v 1.1634 2001/04/03 15:51:53 thorpej Exp $

<200104>
2001-04-03  Jason R. Thorpe  <thorpej@zembu.com>

	* racoon: Better integration of debugging malloc libraries.
	Use wrapper macros (racoon_{malloc,calloc,free,realloc}())
	so that debugging malloc implementations can get file/line
	info, and also put traditional malloc/calloc/free/realloc
	stubs in the main program so that libraries linked with
	racoon get the debugging allocators, as well.

Mon Apr  3 JST 2001  itojun@iijlab.net
	* sys/netinet6/tcp6_output.c (freebsd2/bsdi3),
	  sys/netinet/tcp_output.c (netbsd/openbsd/bsdi4):
	  support IPV6_USE_MIN_MTU setsockopt on IPv6 tcp.
	  - pass IPV6_MINMTU down to ip6_output,
	  - on outgoing segment packing use 1280 (IPV6_MMTU) as packet size,
	    instead of MSS heard from the peer (except bsdi4/openbsd).

	  design memo:
	  do we need to play with MSS advertisement to the peer?  I don't
	  think so, since:
	  - IPV6_MIN_MTU controls outbound traffic only
	  - outgoing MSS advertisement will control the inbound segment size.
	  though i agree that it is be useful to decrase MSS advertisement
	  to trick inbound PMTUD behavior, i believe it is a separate topic
	  from IPV6_MIN_MTU.

	  TODO: generate packets fit into 1280 bytes for bsdi4/openbsd

2001-04-02  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* bsdi3/sys/net/if.c (ifa_ifwithnet): disabled the check for
	IFF_POINTOPOINT|IFF_LOOPBACK in ifa_ifwithnet().  The check for
	IFF_POINTOPOINT was already disabled, but the check for
	IFF_LOOPBACK should be disabled as well, in order to install
	fe80::%lo0/64 correctly.

2001-04-01  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/ip6_input.c (ip6_input): clarified goto-ours
	logic:
	1. separated checks against spoofed ::1 src/dst from the goto-ours
	check.  This also fixed a bug that the kernel accepted a packet with
	src=::1, dst=invalid (not assigned), rcvif=lo0