@@ -1,8 +1,13 @@
 			CHANGELOG for KAME kit
 
-$KAME: CHANGELOG,v 1.1634 2001/04/03 15:51:53 thorpej Exp $
+$KAME: CHANGELOG,v 1.1635 2001/04/04 04:21:19 suz Exp $
 
 <200104>
+Wed Apr  4 13:17:00 JST 2001	suz@sdl.hitachi.co.jp
+	* kame/v6test/getconfig.c
+	fixed a bug that you cannot specify an optional value if its 
+	MSB is on.
+
 2001-04-03  Jason R. Thorpe  <thorpej@zembu.com>
 
 	* racoon: Better integration of debugging malloc libraries.
